--- a/src/styles/utilities/_functions.scss
+++ b/src/styles/utilities/_functions.scss
@@ -1,1 +1,8 @@
 // Define functions
+@function space($key) {
+    @return map-get($spacers, $key);
+}
+
+@function size($key) {
+    @return map-get($sizes, $key);
+}
